--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -50,25 +50,48 @@ button:hover {
     height: 100%;
     width: 25%;
 }
+
 .popover {
     visibility: hidden;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     background: #FAFAFA;
-    padding-bottom: 25px;
+    padding-bottom: 15px;
+    height: 300px;
+    overflow-y: hidden;
 }
+.popover:hover {
+    overflow-y: auto;
+}
+
 .amenities .popover {
-    padding: 20px 0;
+    padding: 10px 0;
     margin-left: -5px;
-    margin-top: 1%;
+    margin-top: 0%;
 }
+
+.amenities .popover ul{
+    margin: 0px;
+}
+
 .locations .popover {
-    margin-top: 1%;
+    margin-top: 0%;
 }
 .popover ul {
     list-style-type: none;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
+.popover ul li{
+    padding: 3px;
+    padding-left: 20px;
+}
+
+.popover ul h2{
+    margin-left: 15px;
+}
+
 .amenities:hover .popover,
 .locations:hover .popover {
     visibility: visible;
