Update Places to be dynamic

--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../static/styles/4-common.css">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-footer.css">
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css">
-    <link rel="icon" href="images/icon.png" />
+    <link rel="icon" href="../static/images/icon.png" />
     <title>HBnB</title>
   </head>
   <body>
@@ -48,57 +49,25 @@
       </section>
       <section class="places">
 	<h1>Places</h1>
+	{% for place in places %}
 	<article>
 	  <div class="title_box">
-	    <h2>My Home</h2>
-	    <div class="price_by_night">$129</div>
+	    <h2>{{ place.name }}</h2>
+	    <div class="price_by_night">${{ place.price_by_night }}</div>
 	  </div>
 	  <div class="information">
-	    <div class="max_guest">6 Guests</div>
-            <div class="number_rooms">4 Bedroom</div>
-            <div class="number_bathrooms">2 Bathroom</div>
+	    <div class="max_guest">{{ place.max_guest }} Guests</div>
+            <div class="number_rooms">{{ place.number_rooms }} Bedroom</div>
+            <div class="number_bathrooms">{{ place.number_bathrooms }} Bathroom</div>
 	  </div>
 	  <div class="user">
-            <b>Owner:</b> Kevin Yook
+            <b>Owner:</b> {{ place.user.first_name }} {{ place.user.last_name }}
           </div>
           <div class="description">
-	    This is my personal house in Korea please stay as much as you want if you come to Korea. Also as a complementary there is a tour guide who will help guide you though Seoul me.
+	    {{ place.description | safe }}
           </div>
 	</article>
-	<article>
-	  <div class="title_box">
-	    <h2>Tiny House</h2>
-	    <div class="price_by_night">$69</div>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">3 Guests</div>
-            <div class="number_rooms">1 Bedroom</div>
-            <div class="number_bathrooms">1 Bathroom</div>
-	  </div>
-	  <div class="user">
-            <b>Owner:</b> John Doe
-          </div>
-          <div class="description">
-	    This house is John's personal hideout. It contains blood stained walls as a feature to the luxery blury light.
-          </div>
-	</article>
-	<article>
-	  <div class="title_box">
-	    <h2>A Suite</h2>
-	    <div class="price_by_night">$179</div>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">4 Guests</div>
-            <div class="number_rooms">4 Bedroom</div>
-            <div class="number_bathrooms">4 Bathroom</div>
-	  </div>
-	  <div class="user">
-            <b>Owner:</b> Bob
-          </div>
-          <div class="description">
-	    This house is a fine suite created by designer bob. Each room has it's own bathrooms
-          </div>
-	</article>
+	{% endfor %}
       </section>
     </div>
     <footer>
