--- a/web_flask/static/styles/8-places.css
+++ b/web_flask/static/styles/8-places.css
@@ -29,8 +29,8 @@
 }
 
 .title_box h2 {
-    text-align: center;
-    margin: 25px 0px 40px 30%;
+    text-align: left;
+    margin: 25px 3% 40px 2%;
 }
 .price_by_night {
     display: flex;
@@ -42,7 +42,7 @@
     color: #FF5A5F;
     border: 4px solid #FF5A5F;
     border-radius: 50%;
-    align-items: right;
+    align-items: center;
     padding: 2.3%;
 }
 
