--- a/web_flask/static/styles/8-places.css
+++ b/web_flask/static/styles/8-places.css
@@ -10,8 +10,10 @@
     text-align: left;
     font-size: 30px;
 }
+
 .places article {
     width: 390px;
+    /* height: 100%; */
     padding: 20px;
     margin: 20px;
     border: 1px solid #FF5A5F;
@@ -31,6 +33,8 @@
 .title_box h2 {
     text-align: left;
     margin: 25px 3% 40px 2%;
+    max-width: 75%;
+    word-wrap: break-word;
 }
 .price_by_night {
     display: flex;
