--- a/web_flask/static/styles/8-places.css
+++ b/web_flask/static/styles/8-places.css
@@ -1,28 +1,33 @@
 .places {
-    display: flex;
-    flex-wrap: wrap;
+    column-count: 2;
+    columns: 30em;
     justify-content: center;
     padding: 0 20px;
+    margin-top: 1%;
     margin-bottom: 8%;
 }
-.places h1 {
+.placesh1 h1 {
     width: 100%;
+    margin-right: 400px;
     text-align: left;
-    font-size: 30px;
+    font-size: 35px;
 }
 
 .places article {
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    display: inline-block;
     width: 390px;
-    /* height: 100%; */
+    height: 100%;
     padding: 20px;
     margin: 20px;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
 }
 .places h2 {
-	font-size: 30px;
-	text-align: center;
-	margin-top: 0;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 0;
 }
 .title_box {
     display: flex;
