--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -47,8 +47,9 @@
 	</div>
 	<button type="button">Search</button>
       </section>
+      <div class="placesh1"><h1>Places</h1></div>
       <section class="places">
-	<h1>Places</h1>
+	<!-- <h1>Places</h1> -->
 	{% for place in places %}
 	<article>
 	  <div class="title_box">
