Fix Margins and Responsive

--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -84,11 +84,13 @@ button:hover {
     padding-left: 10px;
 }
 .popover ul li{
-    padding: 3px;
+    padding: 4px;
     padding-left: 10px;
 }
 
 .popover ul h2{
+    margin-top: 1.5%;
+    margin-bottom: 5%;
     margin-left: 0px;
 }
 
