--- a/web_flask/static/styles/8-places.css
+++ b/web_flask/static/styles/8-places.css
@@ -6,6 +6,14 @@
     margin-top: 1%;
     margin-bottom: 8%;
 }
+@media only screen and (max-width: 920px)
+{
+    .places {
+	display: flex;
+	flex-wrap: wrap;
+    }
+}
+
 .placesh1 h1 {
     width: 100%;
     margin-right: 400px;
